nunaliit2-js: In legend widget, leaves size of SVG element to CSS. Also, make all points the same size to prevent overflow.
Issue #599

--- a/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.widget.css
+++ b/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.widget.css
@@ -699,3 +699,9 @@ Map Legend
 	float: left;
 }
 
+.n2widgetLegend_svg {
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+}
+
